fix :  text is overlaping issue

--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -131,6 +131,7 @@
   td {
     overflow-x: initial;
     padding: 8px 12px !important;
+    overflow-y: hidden;
 
 
     // &.has-number {
